Enhance error messages and handling